--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build": "lerna run build",
     "lint": "lerna run lint",
     "dep-check": "lerna run dep-check",
-    "release": "lerna run --concurrency 1 release -- --"
+    "release": "lerna run --concurrency 1 release -- --",
+    "start": "webrtc-star"
   },
   "dependencies": {
     "lerna": "^4.0.0",
